# aliyun_ipv6_ddns

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
aliyun_ddns/: core.py  gui.py  utils.py
src/aliyun_ddns/: __init__.py  cli.py  core.py  gui.py
src/aliyun_ddns/models/: __init__.py  config.py
src/aliyun_ddns/services/: __init__.py  dns.py  ip.py
src/aliyun_ddns/utils/: __init__.py  logging.py  retry.py
tests/: conftest.py
tests/integration/: test_core.py
tests/unit/: test_config.py  test_ip_service.py  test_retry.py
